--- a/Ecommerce.html
+++ b/Ecommerce.html
@@ -34,13 +34,13 @@
             <a class="nav-link text-light active" aria-current="page" href="#">الرئيسية</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link text-light " href="#" >من نحن </a>
+            <a class="nav-link text-light " href="#about" >من نحن </a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-light" href="#"
+            <a class="nav-link dropdown-toggle text-light" 
              id="navbarDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
-              المنتجات
+            الخدمات
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="#">العروض</a></li>
@@ -52,7 +52,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-light " href="#" tabindex="-1" aria-disabled="true">الخدمات</a>
+            <a class="nav-link text-light " href="#product" tabindex="-1" aria-disabled="true">المنتجات </a>
           </li>
         </ul>
       </div>
@@ -274,8 +274,8 @@
   </div>
 </div>
 <!-- ========================================================================== -->
-<div class="back text-light text-center mt-5 p-5 m-auto ">
-  <h3 class="mx-auto p-2 mb-4 text-warning " id="we">تواصل معنا</h3>
+<div id="about" class="back text-light text-center mt-5 p-5 m-auto ">
+  <h3 class="mx-auto p-2 mb-4 text-warning " >تواصل معنا</h3>
   <p>
     يقدم لك موقعنا تجربة جديدة ومعاصرة وفريدة من نوعها في عالم التسوق ومع تسوق الكتروني ممتع وسهل فالاستخدام عند
     الحاجة الة شراء اي نوع من المنتجات <br>
@@ -506,7 +506,7 @@
   </div>
 </div>
 <!-- card -->
-<div class="container py-5">
+<div class="container py-5" id="product">
   <div class="text-center">
     <h4 class="d-inline-block border-bottom border-danger mb-5 pb-1 fs-2 title" >
       المنتجات المتاحة الآن</h4>
@@ -802,10 +802,10 @@
             <a href="#" class="text-light text-decoration-none hover:text-warning">الرئيسية</a>
           </li>
           <li class="mb-2">
-            <a href="#" class="text-light text-decoration-none hover:text-warning">من نحن</a>
+            <a href="#about" class="text-light text-decoration-none hover:text-warning" >من نحن</a>
           </li>
           <li class="mb-2">
-            <a href="#" class="text-light text-decoration-none hover:text-warning">المنتجات</a>
+            <a href="#product" class="text-light text-decoration-none hover:text-warning">المنتجات</a>
           </li>
           <li class="mb-2">
             <a href="#" class="text-light text-decoration-none hover:text-warning">اتصل بنا</a>
