Renamed Ecommerce.html to index.html

--- a/index.html
+++ b/index.html
@@ -677,16 +677,16 @@
   <h2 class=" mb-4 text-warning">آراء عملائنا</h2>
   <div id="customerReviews" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active">
+      <div class="carousel-item ">
         <blockquote class="blockquote">
           <p class="mb-4">"خدمة رائعة ومنتجات عالية الجودة. أنصح الجميع بالتسوق من هنا!"</p>
-          <footer class="blockquote-footer text-warning">أحمد علي</footer>
+          <footer class="blockquote-footer text-warning  bg-light m-auto w-25">أحمد علي</footer>
         </blockquote>
-      </div>
-      <div class="carousel-item">
+        </div>
+      <div class="carousel-item active" >
         <blockquote class="blockquote">
           <p class="mb-4">"تجربة تسوق ممتازة ودعم فني متجاوب."</p>
-          <footer class="blockquote-footer text-warning">سارة محمد</footer>
+          <footer class="blockquote-footer text-warning bg-light m-auto w-25">سارة محمد</footer>
         </blockquote>
       </div>
       <!-- أضف المزيد من آراء العملاء هنا -->
@@ -705,13 +705,12 @@
 <section class="container my-5 tcenter">
   <h2 class="text-center mb-4 border-bottom border-danger  mx-auto pb-2  title">من مدونتنا</h2>
   <p class="text-center text-muted">اكتشف أحدث المقالات حول عالم الأزياء والموضة، وتعلم كيفية تنسيق إطلالاتك بأناقة.</p>
-  <div class="row">
+  <div class="row m-auto text-center">
     <div class="col-md-4">
       <div class="card h-100">
-      
         <img src="https://img.freepik.com/premium-photo/white-bathrobe_63253-6155.jpg?ga=GA1.1.273946594.1737888839&semt=ais_incoming" class="card-img-top" alt="تنسيق الملابس العصرية">
         <div class="card-body">
-          <h5 class="card-title">كيفية تنسيق الملابس العصرية بأسلوب أنيق</h5>
+          <h5 class="card-title">كيفية تنسيق الملابس العصرية بأناقة</h5>
           <p class="card-text">اكتشف أسرار تنسيق الملابس بأسلوب عصري وأنيق، مع نصائح لاختيار الألوان والإكسسوارات التي تعزز من جاذبيتك.</p>
           <a href="#" class="btn btn-primary">اقرأ المزيد</a>
         </div>
@@ -733,7 +732,7 @@
         <div class="card-body">
           <h5 class="card-title">دليل اختيار الملابس المناسبة لكل موسم</h5>
           <p class="card-text">تعرف على كيفية اختيار الملابس المناسبة لكل فصل من فصول السنة، مع نصائح حول الأقمشة والتصاميم التي تمنحك الراحة والأناقة.</p>
-          <a href="#" class="btn btn-primary">اقرأ المزيد</a>
+          <a href="#" class="btn btn-primary ">اقرأ المزيد</a>
         </div>
       </div>
     </div>
